--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "-": "^0.0.1",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "g": "^2.0.1",
+    "nodemon": "^2.0.19",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.4"
   }
 }
